update: cleanup cart items :)